# c2usb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  west.yml  west4mcuxsdk.yml  west4nrfsdk.yml
.github/template/west-update/: action.yml
.github/workflows/: arm-gcc.yml  cmake-multi-platform.yml  cmake-single-platform.yml  codeql.yml  zephyr.yml
c2usb/: CMakeLists.txt  Kconfig  c2usb.hpp  raw_to_hex_string.hpp  raw_to_hex_string.test.cpp  reference_array_view.hpp  reference_array_view.test.cpp  single_elem_queue.hpp  uninit_store.hpp
c2usb/bluetooth/: CMakeLists.txt  Kconfig  advertise.hpp  base.hpp  device_info.hpp  gatt.hpp  hid_over_gatt.cpp  hid_over_gatt.hpp  le.hpp  uuid.hpp
c2usb/examples/: CMakeLists.txt  high_resolution_mouse.hpp  leds_saving_keyboard.hpp  simple_keyboard.hpp
c2usb/hid/: Kconfig  application.cpp  application.hpp  transport.hpp
c2usb/i2c/: Kconfig  base.hpp  slave.hpp
c2usb/i2c/hid/: device.cpp  device.hpp  standard.hpp
c2usb/port/: compatibility_helper.hpp
c2usb/port/nxp/: CMakeLists.txt  Kconfig  README.md  controller_interface.hpp  dwc3_mac.cpp  ehci_mac.cpp  khci_mac.cpp  kusb_mac.cpp  lpcip3511_mac.cpp  mcux_mac.cpp  mcux_mac.hpp
c2usb/port/zephyr/: CMakeLists.txt  Kconfig  Kconfig.shell  README.md  message_queue.hpp  semaphore.hpp  tick_timer.hpp  udc_mac.cpp  udc_mac.hpp  usb_shell.c  usb_shell.cpp  usb_shell.hpp
c2usb/port/zephyr/bluetooth/: CMakeLists.txt  Kconfig  gatt.hpp  hid.cpp  hid.hpp  le.hpp
c2usb/usb/: base.hpp  control.hpp  endpoint.hpp  product_info.hpp  speeds.hpp  version.hpp
c2usb/usb/class/: cdc.hpp  hid.hpp
c2usb/usb/df/: README.md  config.cpp  config.hpp  config.test.cpp  device.cpp  device.hpp  ep_flags.hpp  function.cpp  function.hpp  mac.cpp  mac.hpp  mac_diag.cpp  mac_diag.hpp  message.cpp  message.hpp  transfer.hpp
c2usb/usb/df/class/: cdc.cpp  cdc.hpp  cdc_acm.cpp  cdc_acm.hpp  hid.cpp  hid.hpp
c2usb/usb/df/port/nxp/: README.md  dwc3_mac.cpp  ehci_mac.cpp  khci_mac.cpp  kusb_mac.cpp  kusb_mac.hpp  lpcip3511_mac.cpp
c2usb/usb/df/port/zephyr/: README.md  udc_mac.cpp  udc_mac.hpp
c2usb/usb/standard/: descriptors.cpp  descriptors.hpp  requests.hpp
examples/: CMakeLists.txt  high_resolution_mouse.hpp  leds_saving_keyboard.hpp  simple_keyboard.hpp
mcux/: Kconfig  README.md  import_mcuxsdk.yml  mcux.code-workspace  module.yml
mcux/config/: mcux_include.json  mcuxpresso-tools.json  settings.json
mcux/examples/usb-keyboard/: CMakeLists.txt  CMakePresets.json  mcux_include.json  prj.conf
mcux/examples/usb-keyboard/src/: main.cpp
patches/mcu-sdk-examples/: 0001-ignore-vscode-project-files.patch
scripts/: mcux-west-commands.yml  requirements.txt  west-commands.yml  west_mcux.py  west_vscode.py
test/: CMakeLists.txt
test/df/: config.test.cpp
test/usb/: version.test.cpp
test/usb/df/: config.test.cpp
zephyr/: Kconfig  Kconfig.hwinfo  README.md  import_nrfsdk.yml  imports.yml  module.yml  zephyr.code-workspace
zephyr/examples/: Kconfig  iolib.hpp
zephyr/examples/ble-keyboard/: CMakeLists.txt  Kconfig  prj.conf
zephyr/examples/ble-keyboard/src/: main.cpp
zephyr/examples/usb-keyboard/: CMakeLists.txt  Kconfig  prj.conf
zephyr/examples/usb-keyboard/src/: main.cpp
zephyr/examples/usb-shell/: CMakeLists.txt  Kconfig.sysbuild  prj.conf
zephyr/examples/usb-shell/src/: main.cpp
