CPMAddPackage("gh:boost-ext/ut@2.3.1")
include(CTest)

add_executable(${PROJECT_NAME}-test)
target_sources(${PROJECT_NAME}-test
    PRIVATE
        df/config.test.cpp
        main.cpp
)
target_include_directories(${PROJECT_NAME}-test
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)
target_link_libraries(${PROJECT_NAME}-test
    PRIVATE
        ${PROJECT_NAME}
        ${PROJECT_NAME}-example-hid
        ut
)
add_test(NAME ${PROJECT_NAME}-test COMMAND ${PROJECT_NAME}-test)

# https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html
# https://embeddedartistry.com/blog/2023/09/20/leveraging-your-toolchain-to-improve-security/
target_link_options(${PROJECT_NAME}
    PUBLIC
        #-fsanitize=address
        -fsanitize=signed-integer-overflow
        -fsanitize=bounds
)
target_compile_options(${PROJECT_NAME}
    PUBLIC
        -ftrivial-auto-var-init=pattern
        -fstack-protector-all
        #-fsanitize=address
        -fno-omit-frame-pointer
        #-fsanitize=undefined
        -fsanitize=signed-integer-overflow
        -fsanitize=bounds
        -Wall
        -Wextra
        -Werror
        -Wformat=2
        -Wsign-conversion
        -Wuninitialized
        -Wcast-qual
        #-Wshadow
        -Wimplicit-fallthrough
        -Wfloat-equal
        -Wstack-protector
        $<$<CXX_COMPILER_ID:GNU>:
            -fconcepts-diagnostics-depth=20
            #-fanalyzer
            -Wshift-overflow=2
            -Warray-bounds=2
            -Wstringop-overflow=4
            -Wuse-after-free=3
            -Wformat-overflow=2
            -Wformat-truncation=2
            -Wformat-signedness
            -Wlogical-op
            -Wduplicated-cond
            -Wduplicated-branches
            #-Wswitch-default
            -Wcast-align=strict
        >
        $<$<CXX_COMPILER_ID:Clang>:
            -Wshift-sign-overflow
            -Warray-bounds-pointer-arithmetic
            -Wformat-type-confusion
            -Wcast-align
            -Wconditional-uninitialized
            -Wloop-analysis
            -Wtautological-constant-in-range-compare
            -Wcomma
            -Wassign-enum
            -Wunreachable-code-aggressive
        >
)
